# ry

./: .codecov.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  ACKNOWLEDGEMENTS.html  API.html  CHANGELOG.html  CHANGELOG.md  CNAME  Cargo.toml  DEVELOPMENT.html  LICENSE-MIT  README.md  TODO.md  _typos.toml  acknowledgements.html  aiopen_test.py  api.html  archives.html  build.rs  coverage.lcov  dep-graph.html  development.html  diff.txt  dprint.json  examples.html  food-4-thought.html  four-o-four.html  index.html  jiff.html  justfile  package.json  patch.txt  prek.toml  print.html  pyproject.toml  pyrightconfig.json  requirements.dev.in  requirements.dev.txt  (+105 more)
.github/: dependabot.yml
.purgatory/: test_bytes_dev.py
bench/: test_aws_lc_digest.py  test_bench_rydantic.py  test_build_profile.py  test_bytes2str.py  (+11 more)
crates/_ryo3-dev/: Cargo.toml  README.md
crates/_ryo3-dev/src/: anystr.rs  lib.rs  quick_maths.rs
crates/_ryo3-dev/src/sp/: done.rs  mod.rs  pydone.rs  run.rs
crates/_ryo3-lz4rip/: Cargo.toml
crates/_ryo3-lz4rip/src/: block.rs  block.rs.bak  frame.rs  lib.rs  py_frame_info.rs  py_lz4_dict_compressor.rs
crates/_ryo3-quick-maths/: Cargo.toml  README.md
crates/_ryo3-quick-maths/src/: lib.rs
crates/ryo3-aws-lc/: Cargo.toml  README.md
crates/ryo3-aws-lc/src/: digest copy.rs  digest.rs  lib.rs
crates/ryo3-brotli/: Cargo.toml  README.md
crates/ryo3-brotli/src/: lib.rs
crates/ryo3-bytes/: Cargo.toml  README.md
crates/ryo3-bytes/src/: anybytes.rs  bytes.rs  bytes_dev.rs  bytes_ext.rs  bytes_like.rs  lib.rs  pyo3_bytes.rs  python_bytes_methods.rs  readable_buffer.rs  replace.rs  ry_bytes.rs  ryo3_bytes.rs  search.rs
crates/ryo3-bytes/src/pyo3_bytes/: bytes.rs  bytes_ext.rs  mod.rs
crates/ryo3-bzip2/: Cargo.toml  README.md
crates/ryo3-bzip2/src/: compression.rs  lib.rs
crates/ryo3-cookie/: Cargo.toml  README.md
crates/ryo3-cookie/src/: lib.rs  py_cookie.rs  types.rs
crates/ryo3-core/: Cargo.toml  README.md
crates/ryo3-core/src/: dict.rs  errors.rs  exceptions.rs  kwargs.rs  lib.rs  map_pyerr.rs  py_cast.rs  py_dict.rs  py_parse.rs  py_str.rs  pymutex.rs  pyparse.rs  pystring.rs  pytryfrom.rs  rymutex.rs  static_str.rs  sync.rs  types.rs
crates/ryo3-core/src/types/: byte.rs  mod.rs  open_mode.rs  pathlike.rs  py_digest.rs  string_or_strings.rs  utf8_bytes.rs
crates/ryo3-dirs/: Cargo.toml  README.md  types.pyi
crates/ryo3-dirs/src/: lib.rs
crates/ryo3-flate2/: Cargo.toml  README.md
crates/ryo3-flate2/src/: compression.rs  gz.rs  lib.rs
crates/ryo3-fnv/: Cargo.toml  README.md
crates/ryo3-fnv/src/: fnv1a.rs  lib.rs
crates/ryo3-fspath/: Cargo.toml  README.md
crates/ryo3-fspath/src/: fspath.rs  lib.rs  pathlib.rs  pydantic.rs
crates/ryo3-glob/: Cargo.toml  README.md
crates/ryo3-glob/src/: lib.rs  pattern.rs
crates/ryo3-globset/: Cargo.toml  README.md
crates/ryo3-globset/src/: constants.rs  globster.rs  lib.rs  options.rs  py_args.rs  py_glob.rs  py_globset.rs  py_globster.rs  traits.rs
crates/ryo3-heck/: Cargo.toml  README.md
crates/ryo3-heck/src/: lib.rs
crates/ryo3-http/: Cargo.toml  README.md
crates/ryo3-http/src/: headers.rs  headers_like.rs  http_serde.rs  http_types.rs  lib.rs  py_conversions.rs  py_http_status.rs  status_code.rs
crates/ryo3-ignore/: Cargo.toml  README.md
crates/ryo3-ignore/src/: lib.rs
crates/ryo3-jiff/: Cargo.toml  README.md
crates/ryo3-jiff/src/: api.rs  constants.rs  delta_arithmetic_self.rs  deprecations.rs  dev.rs  dev_sandbox.rs  difference.rs  difference_options.rs  errors.rs  from.rs  from_str.rs  functions.rs  interns.rs  into_span_arithmetic.rs  intz.rs  isoformat.rs  jiff_types.rs  lib.rs  nujiff.rs  py_temporal_like.rs  pydantic.rs  pydatetime_conversions.rs  round.rs  ry_date.rs  ry_date_difference.rs  ry_datetime.rs  ry_datetime_difference.rs  ry_datetime_round.rs  ry_iso_week_date.rs  ry_offset.rs  ry_signed_duration.rs  ry_span.rs  ry_time.rs  ry_time_difference.rs  ry_timestamp.rs  ry_timestamp_difference.rs  ry_timestamp_round.rs  ry_timezone.rs  ry_timezone_database.rs  ry_weekday.rs  (+11 more)
crates/ryo3-jiff/src/civil/: mod.rs
crates/ryo3-jiff/src/internal/: datetime_round.rs  mod.rs  span_relative_to.rs
crates/ryo3-jiff/src/pydatetime_conversions/: date.rs  datetime.rs  era.rs  era_year.rs  mod.rs  offset.rs  round_mode.rs  signed_duration.rs  span.rs  time.rs  timestamp.rs  timezone.rs  tz_disambiguation.rs  tz_offset_conflict.rs  unit.rs  utils.rs  weekday.rs  zoned.rs
crates/ryo3-jiff/src/tz/: mod.rs
crates/ryo3-jiter/: Cargo.toml  README.md
crates/ryo3-jiter/src/: jiter_options.rs  json_bytes.rs  lib.rs
crates/ryo3-json/: Cargo.toml  README.md
crates/ryo3-json/src/: lib.rs  minify.rs  orjson.rs  serialize.rs  stringify.rs  transcode.rs
crates/ryo3-json/src/orjson/: mod.rs  oj_opt.rs
crates/ryo3-macro-rules/: Cargo.toml  README.md
crates/ryo3-macro-rules/src/: lib.rs  not_implemented.rs  py_errs.rs
crates/ryo3-macros/: Cargo.toml  README.md
crates/ryo3-macros/src/: lib.rs
crates/ryo3-memchr/: Cargo.toml
crates/ryo3-memchr/src/: byte.rs  lib.rs  memmem.rs  py_memchr.rs
crates/ryo3-pydantic/: Cargo.toml  README.md
crates/ryo3-pydantic/src/: lib.rs
crates/ryo3-regex/: Cargo.toml  README.md
crates/ryo3-regex/src/: dev_sandbox.rs  lib.rs  py_captures.rs  py_regex.rs  py_regex_options.rs  py_regex_set.rs
crates/ryo3-reqwest/: Cargo.toml  README.md  _notes.md
crates/ryo3-reqwest/src/: async_client.rs  blocking.rs  body.rs  cert.rs  charset.rs  client.rs  client_config.rs  cookie.rs  default_client.rs  errors.rs  fetch.rs  form_data.rs  lib.rs  proxy.rs  pyo3_bytes.rs  pyo3_json_bytes.rs  query_like.rs  request.rs  response.rs  response_data.rs  response_head.rs  response_mut.rs  response_parking_lot.rs  response_stream.rs  response_tokio_mutex.rs  rustls_provider.rs  tls.rs  tls_version.rs  types.rs  urlencode.rs  user_agent.rs
crates/ryo3-reqwest/src/_experiments/: blocking.rs  query_like.rs  response_tokio_mutex.rs
crates/ryo3-same-file/: Cargo.toml  README.md
crates/ryo3-same-file/src/: lib.rs
(+659 files in other folders)
