[package]
name = "ry"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "ry = rust + python"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ry"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace = true, features = [] }
ryo3 = { workspace = true, features = ["ry"] }
tracing.workspace = true
tracing-log = { workspace = true }
tracing-subscriber.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true
jiff.workspace = true

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
incremental = false
strip = true
debug = false
panic = "abort"
# __FAT_VS_THIN_LTO__?
# tbd if this ought to be fat or thin, on one hand, 'thin' compiles MUCH faster
# but on the other hand, I am an american...
# there does not seem to be a noticeable difference in the performance tho
# at the time of writing this (2024-12-20) the `fat` binary is 12.5mb and
# the `thin` binary is 12.6mb (who's thin now!?).
lto = "thin" # or "fat"
# lto = "fat"

# release fat profile
[profile.bench]
inherits = "release"
lto = "fat"

[workspace.package]
version = "0.0.53"
authors = [
  "Jesse K. Rubin <jessekrubin@gmail.com>",
  # hopefully you will contribute!
]
categories = ["api-bindings"]
documentation = "https://github.com/jessekrubin/ry"
edition = "2024"
homepage = "https://github.com/jessekrubin/ry"
keywords = ["python", "pyo3", "ryo3"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jessekrubin/ry"

[workspace]
resolver = "2"
members = [
  "crates/_ryo3-dev",
  "crates/_ryo3-quick-maths",
  "crates/ryo3",
  # external wrappers
  "crates/ryo3-brotli",
  "crates/ryo3-bytes",
  "crates/ryo3-bzip2",
  "crates/ryo3-core",
  "crates/ryo3-dirs",
  "crates/ryo3-flate2",
  "crates/ryo3-fnv",
  "crates/ryo3-fspath",
  "crates/ryo3-glob",
  "crates/ryo3-globset",
  "crates/ryo3-heck",
  "crates/ryo3-http",
  "crates/ryo3-jiff",
  "crates/ryo3-jiter",
  "crates/ryo3-json",
  "crates/ryo3-macro-rules",
  "crates/ryo3-regex",
  "crates/ryo3-reqwest",
  "crates/ryo3-same-file",
  "crates/ryo3-serde",
  "crates/ryo3-shlex",
  "crates/ryo3-size",
  "crates/ryo3-sqlformat",
  "crates/ryo3-std",
  "crates/ryo3-tokio",
  "crates/ryo3-ulid",
  "crates/ryo3-unindent",
  "crates/ryo3-url",
  "crates/ryo3-uuid",
  "crates/ryo3-walkdir",
  "crates/ryo3-which",
  "crates/ryo3-xxhash",
  "crates/ryo3-zstd",
]

[workspace.dependencies]
# ======
# ryo3-*
# ======
# internal
ryo3 = { path = "./crates/ryo3", features = [] }
# dev/future
# ryo3-ignore = { path = "./crates/_future/ryo3-ignore" }
# wrappers
ryo3-brotli = { path = "./crates/ryo3-brotli" }
ryo3-bytes = { path = "./crates/ryo3-bytes" }
ryo3-bzip2 = { path = "./crates/ryo3-bzip2" }
ryo3-core = { path = "./crates/ryo3-core" }
ryo3-dev = { path = "./crates/_ryo3-dev" }
ryo3-dirs = { path = "./crates/ryo3-dirs" }
ryo3-flate2 = { path = "./crates/ryo3-flate2" }
ryo3-fnv = { path = "./crates/ryo3-fnv" }
ryo3-fspath = { path = "./crates/ryo3-fspath" }
ryo3-glob = { path = "./crates/ryo3-glob" }
ryo3-globset = { path = "./crates/ryo3-globset" }
ryo3-heck = { path = "./crates/ryo3-heck" }
ryo3-http = { path = "./crates/ryo3-http" }
ryo3-jiff = { path = "./crates/ryo3-jiff" }
ryo3-jiter = { path = "./crates/ryo3-jiter" }
ryo3-json = { path = "./crates/ryo3-json" }
ryo3-macro-rules = { path = "crates/ryo3-macro-rules" }
ryo3-quick-maths = { path = "./crates/_ryo3-quick-maths" } # template library
ryo3-regex = { path = "./crates/ryo3-regex" }
ryo3-reqwest = { path = "./crates/ryo3-reqwest" }
ryo3-same-file = { path = "./crates/ryo3-same-file" }
ryo3-serde = { path = "./crates/ryo3-serde" }
ryo3-shlex = { path = "./crates/ryo3-shlex" }
ryo3-size = { path = "./crates/ryo3-size" }
ryo3-sqlformat = { path = "./crates/ryo3-sqlformat" }
ryo3-std = { path = "./crates/ryo3-std" }
ryo3-tokio = { path = "./crates/ryo3-tokio" }
ryo3-ulid = { path = "./crates/ryo3-ulid" }
ryo3-unindent = { path = "./crates/ryo3-unindent" }
ryo3-url = { path = "./crates/ryo3-url" }
ryo3-uuid = { path = "./crates/ryo3-uuid" }
ryo3-walkdir = { path = "./crates/ryo3-walkdir" }
ryo3-which = { path = "./crates/ryo3-which" }
ryo3-xxhash = { path = "./crates/ryo3-xxhash" }
ryo3-zstd = { path = "./crates/ryo3-zstd" }

# pyo3
pyo3 = { version = "0.25.1", features = ["macros", "serde"] }
# pyo3 async runtimes
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
pyo3-build-config = "0.25.1"
# pyo3-async-runtimes = { git = "https://github.com/PyO3/pyo3-async-runtimes", features = ["tokio-runtime"] }

# external
ahash = "0.8.12"
anyhow = "1.0"
brotli = "8.0.1"
bytes = "1.10.1"
bzip2 = "0.6.0"
dirs = { version = "6.0.0", features = [] }
flate2 = "1.1.2"
fnv = "1.0.7"
futures-core = "0.3.31"
futures-util = "0.3.31"
glob = "0.3"
globset = { version = "0.4.16", features = ["serde"] }
heck = "0.5.0"
http = "1.3.1"
jiff = { version = "0.2.14", features = ["default", "serde", "perf-inline"] }
jiter = { version = "0.10.0", features = ["python"] }
parking_lot = "0.12.3"
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["brotli", "charset", "cookies", "deflate", "gzip", "http2", "macos-system-configuration", "multipart", "json", "rustls-tls-native-roots", "stream", "zstd"], default-features = false }
same-file = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde-transcode = "1.1.1"
serde_bytes = "0.11.17"
serde_json = { version = "1.0.141", features = ["std"] }
shlex = "1.3.0"
size = "0.5.0"
sqlformat = "0.3.5"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["bytes", "fs", "macros", "parking_lot", "rt", "rt-multi-thread", "sync", "io-util"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["serde", "serde_json", "default"] }
ulid = { version = "1.2.1" }
unindent = "0.2.4"
url = { version = "2.5.4" }
uuid = { version = "1.18.0", features = ["v4", "v8"] }
walkdir = "2.5.0"
which = { version = "8.0.0", features = [] }
xxhash-rust = { version = "0.8.15", features = ["const_xxh3", "const_xxh32", "const_xxh64", "xxh3", "xxh32", "xxh64"] }
zstd = "0.13.3"
zstd-safe = "7.2.4"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# groups
cargo = { level = "warn", priority = -2 }
all = { level = "warn", priority = -2 }
# periodically check nursery lints
# nursery = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
correctness = { level = "warn", priority = 2 }
panic = { level = "warn", priority = -1 }
style = { level = "warn", priority = 1 }
perf = { level = "warn", priority = 3 }
# deny lints
unwrap_used = "deny"
# warn
# arithmetic_side_effects = "warn"
# allow pedantic
missing_errors_doc = "allow"
module_name_repetitions = "allow"
# cargo allowed
multiple_crate_versions = "allow"

# nursery
use_self = "warn"

# nursery
# as_ptr_cast_mut = 'allow'
# derive_partial_eq_without_eq = "allow"
# equatable_if_let = "allow"
# literal_string_with_formatting_args = "allow"
# missing_const_for_fn = "allow"
# option_if_let_else = "allow"
# or_fun_call = "allow"
# redundant_pub_crate = "allow"
# significant_drop_in_scrutinee = "allow"
# significant_drop_tightening = "allow"
# needless_pass_by_ref_mut = "allow"
# cognitive_complexity = "allow"
# use_self = "allow"
