[package]
name = "ry"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "ry = rust + python"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ry"
crate-type = ["cdylib", "rlib"]

[dependencies]
mimalloc = { workspace = true, optional = true }
pyo3 = { workspace = true, features = [] }
ryo3 = { workspace = true, features = ["ry"] }
tracing.workspace = true
tracing-log = { workspace = true }
tracing-subscriber.workspace = true

[features]
default = ["aws-lc-rs"]
mimalloc = ["dep:mimalloc"]
ring = ["ryo3/ring"]
aws-lc-rs = ["ryo3/aws-lc-rs"]

[build-dependencies]
pyo3-build-config.workspace = true
jiff.workspace = true

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
incremental = false
strip = true
debug = false
panic = "abort"
# __FAT_VS_THIN_LTO__?
# tbd if this ought to be fat or thin, on one hand, 'thin' compiles MUCH faster
# but on the other hand, I am an american...
# there does not seem to be a noticeable difference in the performance tho
# at the time of writing this (2024-12-20) the `fat` binary is 12.5mb and
# the `thin` binary is 12.6mb (who's thin now!?).
# lto = "thin" # or "fat"
lto = "fat"

[profile.release-thin]
inherits = "release"
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"
lto = "thin"

[profile.bench]
inherits = "release"
lto = "fat"

[workspace.package]
version = "0.0.78"
authors = [
  "jesse k. rubin <jessekrubin@gmail.com>",
  # hopefully you will contribute!
]
categories = ["api-bindings"]
documentation = "https://github.com/jessekrubin/ry"
edition = "2024"
homepage = "https://github.com/jessekrubin/ry"
keywords = ["python", "pyo3", "ryo3"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jessekrubin/ry"

[workspace]
resolver = "2"
members = [
  "crates/_ryo3-dev",
  "crates/_ryo3-quick-maths",
  "crates/ryo3",
  "crates/_future/ryo3-ignore",
  "crates/_future/ryo3-tokio-websockets",
  # external wrappers
  "crates/ryo3-brotli",
  "crates/ryo3-bytes",
  "crates/ryo3-bzip2",
  "crates/ryo3-core",
  "crates/ryo3-dirs",
  "crates/ryo3-flate2",
  "crates/ryo3-fnv",
  "crates/ryo3-fspath",
  "crates/ryo3-glob",
  "crates/ryo3-globset",
  "crates/ryo3-heck",
  "crates/ryo3-http",
  "crates/ryo3-jiff",
  "crates/ryo3-jiter",
  "crates/ryo3-json",
  "crates/ryo3-macro-rules",
  "crates/ryo3-memchr",
  "crates/ryo3-pydantic",
  "crates/ryo3-regex",
  "crates/ryo3-reqwest",
  "crates/ryo3-same-file",
  "crates/ryo3-serde",
  "crates/ryo3-shlex",
  "crates/ryo3-size",
  "crates/ryo3-sqlformat",
  "crates/ryo3-std",
  "crates/ryo3-tokio",
  "crates/ryo3-twox-hash",
  "crates/ryo3-ulid",
  "crates/ryo3-unindent",
  "crates/ryo3-url",
  "crates/ryo3-uuid",
  "crates/ryo3-walkdir",
  "crates/ryo3-which",
  "crates/ryo3-zstd",
]

[workspace.dependencies]
# ======
# ryo3-*
# ======
# internal
ryo3 = { path = "./crates/ryo3", features = [] }
# dev/future
ryo3-ignore = { path = "./crates/_future/ryo3-ignore" }
ryo3-tokio-websockets = { path = "./crates/_future/ryo3-tokio-websockets" }
# wrappers
ryo3-brotli = { path = "./crates/ryo3-brotli" }
ryo3-bytes = { path = "./crates/ryo3-bytes" }
ryo3-bzip2 = { path = "./crates/ryo3-bzip2" }
ryo3-core = { path = "./crates/ryo3-core" }
ryo3-dev = { path = "./crates/_ryo3-dev" }
ryo3-dirs = { path = "./crates/ryo3-dirs" }
ryo3-flate2 = { path = "./crates/ryo3-flate2" }
ryo3-fnv = { path = "./crates/ryo3-fnv" }
ryo3-fspath = { path = "./crates/ryo3-fspath" }
ryo3-glob = { path = "./crates/ryo3-glob" }
ryo3-globset = { path = "./crates/ryo3-globset" }
ryo3-heck = { path = "./crates/ryo3-heck" }
ryo3-http = { path = "./crates/ryo3-http" }
ryo3-jiff = { path = "./crates/ryo3-jiff" }
ryo3-jiter = { path = "./crates/ryo3-jiter" }
ryo3-json = { path = "./crates/ryo3-json" }
ryo3-macro-rules = { path = "crates/ryo3-macro-rules" }
ryo3-memchr = { path = "crates/ryo3-memchr" }
ryo3-pydantic = { path = "./crates/ryo3-pydantic" }
ryo3-quick-maths = { path = "./crates/_ryo3-quick-maths" } # template library
ryo3-regex = { path = "./crates/ryo3-regex" }
ryo3-reqwest = { path = "./crates/ryo3-reqwest" }
ryo3-same-file = { path = "./crates/ryo3-same-file" }
ryo3-serde = { path = "./crates/ryo3-serde" }
ryo3-shlex = { path = "./crates/ryo3-shlex" }
ryo3-size = { path = "./crates/ryo3-size" }
ryo3-sqlformat = { path = "./crates/ryo3-sqlformat" }
ryo3-std = { path = "./crates/ryo3-std" }
ryo3-tokio = { path = "./crates/ryo3-tokio" }
ryo3-twox-hash = { path = "./crates/ryo3-twox-hash" }
ryo3-ulid = { path = "./crates/ryo3-ulid" }
ryo3-unindent = { path = "./crates/ryo3-unindent" }
ryo3-url = { path = "./crates/ryo3-url" }
ryo3-uuid = { path = "./crates/ryo3-uuid" }
ryo3-walkdir = { path = "./crates/ryo3-walkdir" }
ryo3-which = { path = "./crates/ryo3-which" }
ryo3-zstd = { path = "./crates/ryo3-zstd" }

# pyo3
pyo3 = { version = "0.27", features = ["macros", "serde"] }
# pyo3 async runtimes
#pyo3-async-runtimes = { version = "0.26.0", features = ["tokio-runtime"] }
pyo3-async-runtimes = { git = "https://github.com/PyO3/pyo3-async-runtimes", features = [
  "tokio-runtime",
] }
pyo3-build-config = "0.27"
# allocator(s)
mimalloc = "0.1.48"
# future
tokio-websockets = { version = "0.13.1", features = [] }
ignore = "0.4.24"
# external
ahash = "0.8.12"
anyhow = "1.0"
brotli = "8.0.2"
bytes = "1.11.0"
bzip2 = "0.6.1"
cookie = { version = "0.18.1", features = ["percent-encode"] }
dirs = { version = "6.0.0", features = [] }
flate2 = "1.1.4"
fnv = "1.0.7"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
glob = "0.3"
globset = { version = "0.4.17", features = ["serde"] }
heck = "0.5.0"
http = "1.4"
jiff = { version = "0.2.18", features = ["default", "serde", "perf-inline"] }
jiter = { version = "0.12", features = ["python"] }
memchr = "2.7.5"
parking_lot = "0.12.5"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = [
  "brotli",
  "charset",
  "cookies",
  "deflate",
  "form",
  "gzip",
  "hickory-dns",
  "http2",
  "json",
  "multipart",
  "query",
  "rustls-no-provider",
  "socks",
  "stream",
  "zstd",
], default-features = false }
same-file = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde-transcode = "1.1.1"
serde_bytes = "0.11.19"
serde_json = { version = "1.0", features = ["std"] }
shlex = "1.3.0"
size = "0.5.0"
sqlformat = "0.5.0"
thiserror = "2.0.17"
tokio = { version = "1.45.1", features = [
  "bytes",
  "fs",
  "io-util",
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = [
  "default",
  "serde",
  "serde_json",
] }
twox-hash = "2.1.2"
rand = "0.9.2"
ulid = { version = "1.2.1" }
unindent = "0.2.4"
url = { version = "2.5.4" }
uuid = { version = "1.18.1", features = [] }
walkdir = "2.5.0"
which = { version = "8.0.0", features = [] }
zstd = "0.13.3"
zstd-safe = "7.2.4"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
missing_copy_implementations = "warn"

[workspace.lints.clippy]
# groups
cargo = { level = "warn", priority = -2 }
all = { level = "warn", priority = -2 }
# periodically check nursery lints
# nursery = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
correctness = { level = "warn", priority = 2 }
panic = { level = "warn", priority = -1 }
style = { level = "warn", priority = 1 }
perf = { level = "warn", priority = 3 }
# deny lints
unwrap_used = "deny"
# warn
# arithmetic_side_effects = "warn"
# allow pedantic
missing_errors_doc = "allow"
module_name_repetitions = "allow"
# cargo allowed
multiple_crate_versions = "allow"
# explicit auto deref always on
explicit_auto_deref = "warn"

# nursery always on
use_self = "warn"

# =======
# nursery
# =======
# __turn_these_on_occasionally__
# equatable_if_let = "warn"
# literal_string_with_formatting_args = "warn"
# significant_drop_in_scrutinee = "warn"
# __TBD__
# significant_drop_in_scrutinee = "allow"
# as_ptr_cast_mut = "allow"
# derive_partial_eq_without_eq = "allow"
# missing_const_for_fn = "allow"
# option_if_let_else = "allow"
# or_fun_call = "allow"
# redundant_pub_crate = "allow"
# significant_drop_tightening = "allow"
# needless_pass_by_ref_mut = "allow"
# cognitive_complexity = "allow" # f-off clippy

[patch.crates-io]
# pyo3 = { git = "https://github.com/pyo3/pyo3.git" }
# pyo3-build-config = { git = "https://github.com/pyo3/pyo3.git" }
# jiter = { git = "https://github.com/jessekrubin/jiter.git", branch = "pyo3-v0.27.x" }
jiter = { git = "https://github.com/pydantic/jiter.git" }
