[build-system]
build-backend = "maturin"

requires = [ "maturin>=1,<2" ]

[project]
name = "ry"
description = "ry = rust + python kitchen sink utils (WIP)"
keywords = [
  "pyo3",
  "rust",
]
license = "MIT OR Apache-2.0"
maintainers = [
  { name = "jesse rubin", email = "jessekrubin@gmail.com" },
]
authors = [
  { name = "jesse rubin", email = "jessekrubin@gmail.com" },
]

requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dynamic = [ "readme", "version" ]

urls.Changelog = "https://github.com/jessekrubin/ry/blob/main/CHANGELOG.md"
urls.Homepage = "https://github.com/jessekrubin/ry"
urls.Issues = "https://github.com/jessekrubin/ry/issues"
urls.Source = "https://github.com/jessekrubin/ry"

[dependency-groups]
dev = [
  "anyio>=4.8",
  "hypothesis>=6.124.2",
  "maturin>=1.8.6",
  "mypy>=1.14.1",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.2",
  "pytest-benchmark>=5.1",
  "ruff>=0.11.12",
  "tomli>=2.2.1",
  "tzdata>=2025.2",
  "uvicorn>=0.34",
]

[tool.maturin]
python-source = "python"
strip = true
features = [ "pyo3/extension-module" ]
module-name = "ry.ryo3"
bindings = "pyo3"

[tool.ruff]
extend = "./ruff.toml"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
filterwarnings = [
  "ignore:ry not compiled in release mode:RuntimeWarning",
]
addopts = [
  "--doctest-modules",
]
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = "function"
norecursedirs = [
  ".git",
  ".nox",
  ".pytest_cache",
  ".venv",
  "build",
  "dist",
  "scratch",
  "node_modules",
  "venv",
  "*.bak",
  "*.egg-info",
  "*.egg",
  ".*",
  "target",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "bench",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pyright]
include = [ 'ry', 'tests' ]
reportUnnecessaryTypeIgnoreComment = true

[tool.uv]
package = false  # don't build package w/ uv
