[build-system]
build-backend = "maturin"
requires = [ "maturin>=1,<2" ]

[project]
name = "ry"
description = "ry == rust | python"
keywords = [
  "datetime",
  "http",
  "jiff",
  "json",
  "pyo3",
  "reqwest",
  "rust",
  "tokio",
  "xxhash",
  "zstd",
]
license = "MIT OR Apache-2.0"
maintainers = [ { name = "jesse rubin", email = "jessekrubin@gmail.com" } ]
authors = [ { name = "jesse rubin", email = "jessekrubin@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dynamic = [ "readme", "version" ]
urls.Changelog = "https://github.com/jessekrubin/ry/blob/main/CHANGELOG.md"
urls.Homepage = "https://github.com/jessekrubin/ry"
urls.Issues = "https://github.com/jessekrubin/ry/issues"
urls.Source = "https://github.com/jessekrubin/ry"

[dependency-groups]
dev = [
  "anyio>=4.8",
  "coverage[toml]>=7.10.7",
  "hypothesis>=6.124.2",
  "ipython>=9.5.0",
  "maturin>=1.13.3",
  "mypy",
  "orjson==3.11.4; implementation_name=='cpython'",
  "prek>=0.4.6",
  "pydantic>=2.11.7",
  "pytest>=9.0.1",
  "pytest-asyncio>=1.0.0",
  "pytest-benchmark>=5.1",
  "pytest-cov>=6.2.1",
  "rich>=15.0.0",
  "ruff>=0.11.12",
  "ty>=0.0.33",
  "tzdata>=2025.2",
  "uvicorn>=0.34",
  "websockets>=16.0",
]
misc = [ "griffe>=1.12.1" ]

[tool.maturin]
module-name = "ry.ryo3"
bindings = "pyo3"
python-source = "python"
include = [ { path = "python/ry/.git-sha", format = "sdist" } ]
features = [ "pyo3/extension-module" ]
# strip = true

[tool.uv]
# UV problemo: https://github.com/astral-sh/setup-uv/issues/489
# BUG IN UV: https://github.com/astral-sh/setup-uv/issues/489#issuecomment-3085384851
required-version = ">=0.7.0"
sources.ry = { workspace = true }
package = false  # don't build package w/ uv

[tool.ruff]
extend = "./ruff.toml"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"
warn_redundant_casts = true
enable_error_code = [ "deprecated" ]
strict = true
# plugins = [ "pydantic.mypy" ]
overrides = [ { module = "tests.*", ignore_missing_imports = true, check_untyped_defs = true } ]

[tool.pyrefly]
errors.bad-match = false
errors.deprecated = "error"
errors.redundant-cast = "warn"
ignore-missing-imports = [
  "tests.*",
  "*",
]
preset = "default"
python-version = "3.11.0"
search-path = [ ".", "python" ]

[tool.pyright]
pythonVersion = "3.11"
useLibraryCodeForTypes = false
include = [ "python", "tests" ]
reportMissingImports = "error"
reportMissingTypeStubs = false
executionEnvironments = [
  { root = "tests/xxhash", reportAttributeAccessIssue = false },
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.norecursedirs = [
  "*.bak",
  "*.egg",
  "*.egg-info",
  ".*",
  ".git",
  ".nox",
  ".pytest_cache",
  ".venv",
  "build",
  "dist",
  "node_modules",
  "scratch",
  "target",
  "venv",
]
ini_options.addopts = [ "--doctest-modules" ]
ini_options.markers = [
  "bench",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
ini_options.filterwarnings = [ "ignore:ry not compiled in release mode:RuntimeWarning" ]
ini_options.asyncio_default_fixture_loop_scope = "function"
ini_options.asyncio_mode = "auto"

[tool.coverage]
run.branch = true
run.context = "${CONTEXT}"
run.omit = [ "python/ry/dev/__main__.py" ]
run.relative_files = true
run.source = [ "python/ry" ]
paths.source = [ "python/ry/" ]
report.exclude_lines = [
  "\\(Protocol\\):$",
  # any generic protocol from `ry.protocols`
  "^\\s*class\\s+\\w+\\(.*\\b(?:typing\\.|t\\.)?Protocol(?:\\[[^\\]]*\\])?.*\\):\\s*(?:#.*)?$",
  "if t.TYPE_CHECKING:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
  # 'typing.assert_never',
  # 'assert_never',
]
report.precision = 2

[tool.rumdl]
disable = [ "MD033" ]
exclude = []
MD013.code_blocks = false
per-file-ignores."README.md" = [ "MD036" ]
per-file-ignores."docs/src/index.md" = [ "MD041" ]
