[package]
name = "ryo3-dev"
description = "ryo3-dev crate"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyo3 = { workspace = true, features = ["experimental-inspect", "experimental-async"] }
ryo3-reqwest.workspace = true
serde.workspace = true
serde_bytes = "0.11.15"
serde_json = "1.0.137"
tracing.workspace = true
ryo3-bytes.workspace = true

# [lints]
# workspace = true
