[package]
name = "ryo3-dev"
description = "ryo3-dev crate"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
