[package]
name = "ryo3-dev"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "ryo3-dev crate"

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
