[package]
name = "ryo3-lz4rip"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "python + lz4rip (https://crates.io/crates/lz4rip)"

[dependencies]
lz4rip = { workspace = true, features = ["frame"] }
pyo3.workspace = true
ryo3-bytes.workspace = true


[lints]
workspace = true
