[package]
name = "ryo3-quick-maths"
description = "ryo3-template-library"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pyo3 = { workspace = true, features = ["experimental-inspect"] }

[lints]
workspace = true
