[package]
name = "ryo3-quick-maths"
version.workspace = true
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "ryo3-template-library"

[dependencies]
pyo3 = { workspace = true, features = [] }

[lints]
workspace = true
